# qgroundcontrol-secure

./: .gitmodules  QGCExternalLibs.pri  README.md  qgroundcontrol.pro
deploy/: create_linux_appimage.sh
deploy/docker/: Dockerfile-build-linux
src/: QGCApplication.cc  QGCApplication.h
src/Vehicle/: MultiVehicleManager.cc  Vehicle.cc
src/comm/: CMakeLists.txt  EncryptionChacha20.cc  EncryptionChacha20.h  MAVLinkProtocol.cc
